<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".QuantaHoraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvEntrada"
            style="@style/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/entrada"
            />

        <EditText
            android:id="@+id/etEntrada"
            style="@style/hora"
            android:layout_below="@+id/tvEntrada"
            android:layout_alignLeft="@+id/tvEntrada"
            android:nextFocusForward="@id/etSaida"
            android:imeOptions="actionNext"
            />

        <TextView
            android:id="@+id/tvSaida"
            style="@style/text"
            android:layout_alignBaseline="@+id/tvEntrada"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/etEntrada"
            android:text="@string/saida"
            />

        <EditText
            android:id="@+id/etSaida"
            style="@style/hora"
            android:layout_below="@+id/tvSaida"
            android:layout_alignLeft="@+id/tvSaida"
            android:nextFocusForward="@id/etTempo"
            android:imeOptions="actionNext"
            />

        <TextView
            android:id="@+id/tvTempo"
            style="@style/text"
            android:layout_alignBaseline="@+id/tvEntrada"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/etSaida"
            android:text="@string/tempo" />

        <EditText
            android:id="@+id/etTempo"
            style="@style/hora"
            android:layout_below="@+id/tvTempo"
            android:layout_alignLeft="@+id/tvTempo"
            android:text="00:00"
            android:nextFocusForward="@id/btnTrabalhada"
            android:imeOptions="actionDone"
            />

        <TextView
            android:id="@+id/tvHoraTrabalhada"
            style="@style/text"
            android:layout_below="@+id/etEntrada"
            android:layout_alignLeft="@+id/tvEntrada"
            android:layout_marginTop="20dp"
            android:text="@string/hora_trabalhada"
            android:minWidth="80sp"
            />

        <EditText
            android:id="@+id/etHoraTrabalhada"
            style="@style/hora"
            android:layout_below="@+id/tvHoraTrabalhada"
            android:layout_alignLeft="@+id/tvHoraTrabalhada"
            android:focusable="false"
            android:text="00:00" />

        <!-- Extra -->
        <TextView
            android:id="@+id/tvExtra"
            android:layout_alignBaseline="@+id/tvHoraTrabalhada"
            android:layout_toRightOf="@+id/etHoraTrabalhada"
            android:layout_marginLeft="20sp"
            style="@style/text"
            android:text="Extra"
            android:minWidth="80sp"
            />
        <EditText
            android:id="@+id/etExtra"
            android:layout_below="@+id/tvExtra"
            android:layout_alignLeft="@+id/tvExtra"
            style="@style/hora"
            android:text="00:00"
            android:focusable="false"
            />

        <!-- Adicional Noturno -->
        <TextView
            android:id="@+id/tvNoturno"
            android:text="Noturno"
            style="@style/text"
            android:layout_alignBaseline="@+id/tvHoraTrabalhada"
            android:layout_toRightOf="@+id/etExtra"
            android:layout_marginLeft="20sp"
            android:minWidth="80sp"
            />
        <EditText
            android:id="@+id/etNoturno"
            style="@style/hora"
            android:text="00:00"
            android:layout_below="@+id/tvNoturno"
            android:layout_alignLeft="@+id/tvNoturno"
            android:focusable="false"
            />

        <TextView
            android:id="@+id/tvSobrando"
            style="@style/text"
            android:minWidth="80sp"
            android:layout_below="@+id/etHoraTrabalhada"
            android:layout_alignLeft="@+id/tvEntrada"
            android:layout_marginTop="20sp"
            android:text="@string/sobrando" />

        <EditText
            android:id="@+id/etSobrando"
            style="@style/hora"
            android:layout_below="@+id/tvSobrando"
            android:layout_alignLeft="@+id/tvSobrando"
            android:focusable="false"
            android:text="00:00" />

        <TextView
            android:id="@+id/tvFechamento"
            style="@style/text"
            android:layout_alignBaseline="@+id/tvSobrando"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/etSobrando"
            android:text="@string/fechamento" />

        <EditText
            android:id="@+id/etFechamento"
            style="@style/hora"
            android:layout_below="@+id/tvFechamento"
            android:layout_alignLeft="@+id/tvFechamento"
            android:focusable="false"
            android:text="00:00" />

        <RelativeLayout
            android:id="@+id/layout_somar_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etSobrando"
            android:layout_marginTop="20dp"
            android:background="@color/marrom"
            android:padding="20sp">

            <TextView
                android:id="@+id/tvHoraSoma01"
                style="@style/text"
                android:minWidth="80sp"
                android:text="Hora 1"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etHoraSoma01"
                style="@style/hora"
                android:layout_below="@+id/tvHoraSoma01"
                android:nextFocusForward="@id/etHoraSoma02"
                android:imeOptions="actionNext"
                />

            <TextView
                android:id="@+id/tvSinalSoma01"
                style="@style/text"
                android:layout_alignTop="@+id/tvHoraSoma01"
                android:layout_alignBottom="@id/etHoraSoma01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/etHoraSoma01"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHoraSoma02"
                style="@style/text"
                android:minWidth="80sp"
                android:layout_alignBaseline="@+id/tvHoraSoma01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/tvSinalSoma01"
                android:text="Hora 2"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etHoraSoma02"
                style="@style/hora"
                android:layout_below="@+id/tvHoraSoma02"
                android:layout_alignLeft="@+id/tvHoraSoma02"
                android:imeOptions="actionDone"
                />

            <TextView
                android:id="@+id/tvSinalIgual01"
                style="@style/text"
                android:layout_alignTop="@+id/tvHoraSoma01"
                android:layout_alignBottom="@id/etHoraSoma01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/etHoraSoma02"
                android:text="="
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalSoma01"
                style="@style/text"
                android:minWidth="80sp"
                android:layout_alignBaseline="@+id/tvHoraSoma01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/tvSinalIgual01"
                android:text="Total"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etTotalSoma01"
                style="@style/hora"
                android:layout_below="@+id/tvTotalSoma01"
                android:layout_alignLeft="@+id/tvTotalSoma01"
                android:text="00:00"
                android:focusable="false"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_subtrair_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_somar_hora"
            android:layout_marginTop="20dp"
            android:background="@color/marrom"
            android:padding="20sp">

            <TextView
                android:id="@+id/tvHoraSubtrair01"
                style="@style/text"
                android:minWidth="80sp"
                android:text="Hora 1"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etHoraSubtrair01"
                style="@style/hora"
                android:layout_below="@+id/tvHoraSubtrair01"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etHoraSubtrair02"
                />

            <TextView
                android:id="@+id/tvSinalSubtrair01"
                style="@style/text"
                android:layout_alignTop="@+id/tvHoraSubtrair01"
                android:layout_alignBottom="@id/etHoraSubtrair01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/etHoraSubtrair01"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHoraSubtrair02"
                style="@style/text"
                android:minWidth="80sp"
                android:layout_alignBaseline="@+id/tvHoraSubtrair01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/tvSinalSubtrair01"
                android:text="Hora 2"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etHoraSubtrair02"
                style="@style/hora"
                android:layout_below="@+id/tvHoraSubtrair02"
                android:layout_alignLeft="@+id/tvHoraSubtrair02"
                android:imeOptions="actionDone"
                />

            <TextView
                android:id="@+id/tvSinalIgual02"
                style="@style/text"
                android:layout_alignTop="@+id/tvHoraSubtrair01"
                android:layout_alignBottom="@id/etHoraSubtrair01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/etHoraSubtrair02"
                android:text="="
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalSubtrair01"
                style="@style/text"
                android:minWidth="80sp"
                android:layout_alignBaseline="@+id/tvHoraSubtrair01"
                android:layout_marginLeft="4sp"
                android:layout_toRightOf="@+id/tvSinalIgual02"
                android:text="Total"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etTotalSubtrair01"
                style="@style/hora"
                android:layout_below="@+id/tvTotalSubtrair01"
                android:layout_alignLeft="@+id/tvTotalSubtrair01"
                android:focusable="false"
                android:text="00:00"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            >
            <Button
                android:id="@+id/btnTrabalhada"
                style="@style/button"
                android:layout_weight="1"
                android:text="Calcular"
                />

            <Button
                android:id="@+id/btnLimpar"
                style="@style/button"
                android:layout_weight="1"
                android:text="LIMPAR"
                />
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>